@@ -371,7 +371,7 @@ uninstall-am: uninstall-info-am uninstall-local
 
 
 rtai_hal.ko: @RTAI_KBUILD_ENV@
-rtai_hal.ko: $(libhal_SRC)
+rtai_hal.ko: $(libhal_SRC) FORCE
 	@RTAI_KBUILD_CMD@
 
 clean-local:
@@ -390,6 +390,8 @@ install-exec-local: rtai_hal$(modext)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_hal$(modext)
+
+.PHONY: FORCE
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
