@@ -370,7 +370,7 @@ uninstall-am: uninstall-info-am
 
 
 rtai_hal.ko: @RTAI_KBUILD_ENV@
-rtai_hal.ko: $(libhal_SRC)
+rtai_hal.ko: $(libhal_SRC) FORCE
 	@RTAI_KBUILD_CMD@
 
 clean-local:
@@ -383,6 +383,8 @@ all-local: rtai_hal$(modext)
 install-exec-local: rtai_hal$(modext)
 	$(mkinstalldirs) $(moduledir)
 	$(INSTALL_DATA) $< $(moduledir)
+
+.PHONY: FORCE
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
