@@ -473,7 +473,7 @@ uninstall-am: uninstall-includeHEADERS uninstall-info-am uninstall-local
 
 
 rtai_posix$(modext): @RTAI_KBUILD_ENV@
-rtai_posix$(modext): $(libmodule_SRC)
+rtai_posix$(modext): $(libmodule_SRC) FORCE
 	@RTAI_KBUILD_CMD@
 
 clean-local:
@@ -492,6 +492,8 @@ install-exec-local: rtai_posix$(modext)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_posix$(modext)
+
+.PHONY: FORCE
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
