@@ -571,7 +571,7 @@ uninstall-info: uninstall-info-recursive
 
 
 rtai_native$(modext): @RTAI_KBUILD_ENV@
-rtai_native$(modext): $(libmodule_SRC)
+rtai_native$(modext): $(libmodule_SRC) FORCE
 	@RTAI_KBUILD_CMD@
 
 clean-local:
@@ -590,6 +590,8 @@ install-exec-local: rtai_native$(modext)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_native$(modext)
+
+.PHONY: FORCE
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
