@@ -764,7 +764,7 @@ uninstall-am: uninstall-includeHEADERS uninstall-info-am \
 
 
 rtai_uitron$(modext): @RTAI_KBUILD_ENV@
-rtai_uitron$(modext): $(libmodule_SRC)
+rtai_uitron$(modext): $(libmodule_SRC) FORCE
 	@RTAI_KBUILD_CMD@
 
 clean-local:
@@ -783,6 +783,8 @@ install-exec-local: rtai_uitron$(modext)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_uitron$(modext)
+
+.PHONY: FORCE
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
