@@ -1025,7 +1025,7 @@ uninstall-am: uninstall-includeHEADERS uninstall-info-am \
 
 
 rtai_vxworks$(modext): @RTAI_KBUILD_ENV@
-rtai_vxworks$(modext): $(libmodule_SRC)
+rtai_vxworks$(modext): $(libmodule_SRC) FORCE
 	@RTAI_KBUILD_CMD@
 
 clean-local:
@@ -1044,6 +1044,8 @@ install-exec-local: rtai_vxworks$(modext)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_vxworks$(modext)
+
+.PHONY: FORCE
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
