@@ -575,7 +575,7 @@ uninstall-am: uninstall-info-am uninstall-local uninstall-testPROGRAMS
 
 
 latency_rt$(modext): @RTAI_KBUILD_ENV@
-latency_rt$(modext): $(libmodule_SRC)
+latency_rt$(modext): $(libmodule_SRC) FORCE
 	@RTAI_KBUILD_CMD@
 
 clean-local:
@@ -604,6 +604,8 @@ uninstall-local:
 
 run: all
 	@$(top_srcdir)/scripts/rtai-load --verbose
+
+.PHONY: FORCE
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
